staller section problem fix

--- a/index.html
+++ b/index.html
@@ -511,9 +511,9 @@
 <!--========================Stellar Section===============================-->
 <section class="stellar">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="contact-image-box">
+    <div class="row g-0">
+      <div class="col-lg-6 d-flex">
+        <div class="image-box w-100">
           <img src="./images/stellar/banner-2.png" alt="">
           <div class="overlay">
             <h3><span>Building stellar</span> <span>websites for</span> early startups</h3>
@@ -523,14 +523,15 @@
         </div>
 
       </div>
-      <div class="col-lg-6">
-        <div class="contact-input-box">
+      <div class="col-lg-6 d-flex">
+        <div class="input-box w-100">
           <h5>Send inquiry</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
           <form >
             <input type="text" placeholder="Your Name">
             <input type="text" placeholder="Email">
             <input type="text" placeholder="Paste your Figma design URL">
+          </form>
             <div class="navbar-button">
               <a href="">Send an Inquiry</a>
             </div>
@@ -538,7 +539,7 @@
             <div class="common-title">
               <a href="">Get in touch with us &nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></a>
             </div>
-          </form>
+          
 
         </div>
       </div>
