responsive 320px to 575.99

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a href="">Get in touch with us &nbsp;&nbsp;<i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
-        <div class="col-lg-7">
+        <div class="col-lg-7 d-flex flex-wrap">
           <!-- d-flex flex-wrap-->
           <div>
             <div class="buttons">
@@ -152,6 +152,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8">
+          <!-- col-md-6 col-sm-6 -->
           <img class="img-fluid" src="./images/project/pro-1.png" alt="" />
           <div class="overlay d-flex flex-column">
             <h3>Workhub office Webflow Webflow Design</h3>
@@ -165,6 +166,7 @@
           </div>
         </div>
         <div class="col-lg-4 d-flex flex-column gap-5">
+          <!-- col-md-6 col-sm-6  -->
           <div class="side-img">
             <img class="img-fluid" src="./images/project/pro-2.png" alt="" />
             <div class="overlay d-flex flex-column">
