--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
           <span>Design that solves</span><span>problems, one product at</span> a time
         </h2>
       </div>
-      <div class="row">
-        <div class="col-lg-4 feature-box">
+      <div class="row d-flex flex-wrap">
+        <div class="col-lg-4 col-md-6 feature-box">
           <div class="feature">
             <img src="./images/icons/icon-1.png" alt="" />
             <h3>Uses Client First</h3>
@@ -211,7 +211,7 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-4 feature-box">
+        <div class="col-lg-4 col-md-6 feature-box">
           <div class="feature">
             <img src="./images/icons/icon-2.png" alt="" />
             <h3>Two Free Revision Round</h3>
@@ -223,7 +223,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-4 feature-box">
+        <div class="col-lg-4 col-md-6 feature-box">
           <div class="feature">
             <img src="./images/icons/icon-3.png" alt="" />
             <h3>Template Customization</h3>
@@ -235,7 +235,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-4 feature-box">
+        <div class="col-lg-4 col-md-6 feature-box">
           <div class="feature">
             <img src="./images/icons/icon-4.png" alt="" />
             <h3>24/7 Support</h3>
@@ -247,7 +247,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-4 feature-box">
+        <div class="col-lg-4 col-md-6 feature-box">
           <div class="feature">
             <img src="./images/icons/icon-5.png" alt="" />
             <h3>Quick Delivery</h3>
@@ -259,7 +259,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-4 feature-box">
+        <div class="col-lg-4 col-md-6 feature-box">
           <div class="feature">
             <img src="./images/icons/icon-6.png" alt="" />
             <h3>Hands-on approach</h3>
